Refactor: 기준 경로 리팩토링

--- a/login.html
+++ b/login.html
@@ -18,6 +18,6 @@
     <p><a href="/exhibitions">전시회 목록 페이지</a></p>
     <p><a href="/security">인증 테스트 페이지</a></p>
 	
-	<script src = "js/custom.js"></script>
+	<script src = "public/js/custom.js"></script>
 </body>
 </html>
