--- a/security.html
+++ b/security.html
@@ -14,7 +14,7 @@
     <p><a href="/exhibitions">전시회 목록 페이지</a></p>
     <p><a href="/security">인증 테스트 페이지</a></p>
 	
-	<script src = "js/custom.js"></script>
+	<script src = "public/js/custom.js"></script>
 	<script>
 		window.addEventListener('DOMContentLoaded', function () {
 			renderSecurity();
